--- a/packages/client/locales/en_gb/admin.json
+++ b/packages/client/locales/en_gb/admin.json
@@ -19,6 +19,7 @@
     "viewInfo": "View Info",
     "noCitizens": "There are no civilians for this CAD yet.",
     "noBusinesses": "There are no businesses for this CAD yet.",
+    "noUnits": "There are no units yet",
     "user": "User",
     "owner": "Owner",
     "GENERAL_SETTINGS": "General Settings",
