--- a/packages/client/locales/en_gb/citizen.json
+++ b/packages/client/locales/en_gb/citizen.json
@@ -55,6 +55,7 @@
     "noVehicles": "You do not have any vehicles registered yet.",
     "deleteVehicle": "Delete Vehicle",
     "reportAsStolen": "Report as stolen",
+    "reApplyForDmv": "Re-apply for DVLA",
     "registeredVehicles": "Registered Vehicles",
     "flags": "Flags",
     "inspectionStatus": "MOT Status",
