--- a/packages/client/locales/en_gb/leo.json
+++ b/packages/client/locales/en_gb/leo.json
@@ -167,9 +167,17 @@
     "license": "License",
     "otherFields": "Other Fields",
     "manageCustomFields": "Manage other fields",
-    "dmv": "Driver and Vehicle Licensing Agency",
-    "noVehiclesPendingApprovalInDmv": "There are no vehicles pending approval by the DVLA.",
-    "alert_deleteDLExam": "Are you sure you want to delete this theory exam? This action cannot be undone.",
+    "dmv": "DVLA",
+    "unitsInvolved": "Units Involved",
+    "customFieldSearch": "Custom Field Search",
+    "noCustomFieldResults": "No results found for this search query.",
+    "customField": "Custom Field",
+    "query": "Query",
+    "penalCodes": "Charges",
+    "noPenalCodes": "There have been no charges created yet.",
+    "noVehiclesPendingApprovalInDmv": "There are no vehicles pending approval in the DVLA.",
+    "citizenIsConfidential": "This civilian's records are sealed and it's information cannot be searched.",
+    "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
