:speech_balloon: Update ru locale

--- a/packages/client/locales/ru/values.json
+++ b/packages/client/locales/ru/values.json
@@ -1,109 +1,124 @@
 {
-  "Values": {
-    "totalItems": "Всего записей",
-    "values": "Значения",
-    "shouldDo": "Выполнить действие",
-    "color": "Цвет",
-    "callsign": "Позывной",
-    "department": "Департамент",
-    "gameHash": "Хэш",
-    "file": "файл",
-    "importValues": "Импорт из файла",
-    "exportValues": "Экспорт значений",
-    "addPenalCodeGroup": "Добавить группу",
-    "deleteGroup": "Удалить группу",
-    "ungrouped": "Без группы",
-    "licenseType": "Тип лицензии",
-    "whitelisted": "В списке доступа",
-    "whatPages": "Какие страницы",
-    "isDefaultDepartment": "Департамент по умолчанию",
-    "deleteSelectedValues": "Удалить выбранные значения",
-    "alert_deletePenalCodeGroup": "Вы уверены, что хотите удалить <span>{group}</span>? Это действие необратимо!",
-    "alert_deleteValue": "Вы уверены, что хотите удалить <span>{value}</span>? Это действие необратимо!",
-    "alert_deleteSelectedValues": "Вы уверены, что хотите удалить {length} запись(-ей)? Это действие необратимо!"
-  },
-  "GENDER": {
-    "MANAGE": "Пол человека",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  },
-  "WEAPON": {
-    "MANAGE": "Оружие",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  },
-  "VEHICLE": {
-    "MANAGE": "Транспорт",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  },
-  "ETHNICITY": {
-    "MANAGE": "Этническая принадлежность",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  },
-  "BLOOD_GROUP": {
-    "MANAGE": "Группы крови",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  },
-  "LICENSE": {
-    "MANAGE": "Лицензии",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  },
-  "BUSINESS_ROLE": {
-    "MANAGE": "Роли в компании",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  },
-  "DEPARTMENT": {
-    "MANAGE": "Департаменты",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  },
-  "CODES_10": {
-    "MANAGE": "Тэнкоды",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  },
-  "OFFICER_RANK": {
-    "MANAGE": "Звания офицеров",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  },
-  "PENAL_CODE": {
-    "MANAGE": "Статьи кодекса",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  },
-  "DIVISION": {
-    "MANAGE": "Подразделения",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  },
-  "DRIVERSLICENSE_CATEGORY": {
-    "MANAGE": "Категории водительской лицензии",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  },
-  "IMPOUND_LOT": {
-    "MANAGE": "Штрафстоянки",
-    "ADD": "Добавить",
-    "DELETE": "Удалить",
-    "EDIT": "Редактировать"
-  }
+    "Values": {
+        "totalItems": "Всего записей",
+        "values": "Значения",
+        "shouldDo": "Выполнить действие",
+        "color": "Цвет",
+        "callsign": "Позывной",
+        "department": "Департамент",
+        "gameHash": "Хэш",
+        "file": "файл",
+        "importValues": "Импорт из файла",
+        "exportValues": "Экспорт значений",
+        "addPenalCodeGroup": "Добавить группу",
+        "deleteGroup": "Удалить группу",
+        "ungrouped": "Без группы",
+        "licenseType": "Тип лицензии",
+        "whitelisted": "В списке доступа",
+        "whatPages": "Какие страницы",
+        "departments": "Департаменты",
+        "isDefaultDepartment": "Департамент по усолчанию",
+        "deleteSelectedValues": "Удалить выбранные значения",
+        "isDefault": "По умолчанию",
+        "defaultOfficerRank": "Звание офицера по умолчанию",
+        "alert_deletePenalCodeGroup": "Вы уверены, что хотите удалить <span>{group}</span>? Это действие необратимо.",
+        "alert_deleteValue": "Вы уверены, что хотите удалить <span>{value}</span>? Это действие необратимо.",
+        "alert_deleteSelectedValues": "Вы уверены, что хотите удалить {length} элемент (ов)? Это действие необратимо."
+    },
+    "GENDER": {
+        "MANAGE": "Пол человека",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "WEAPON": {
+        "MANAGE": "Оружие",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "VEHICLE": {
+        "MANAGE": "Транспорт",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "ETHNICITY": {
+        "MANAGE": "Этническая принадлежность",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "BLOOD_GROUP": {
+        "MANAGE": "Группы крови",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "LICENSE": {
+        "MANAGE": "Лицензии",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "BUSINESS_ROLE": {
+        "MANAGE": "Роли в компании",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "DEPARTMENT": {
+        "MANAGE": "Департаменты",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "CODES_10": {
+        "MANAGE": "Тэнкоды",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "OFFICER_RANK": {
+        "MANAGE": "Звания офицеров",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "PENAL_CODE": {
+        "MANAGE": "Статьи кодекса",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "DIVISION": {
+        "MANAGE": "Подразделения",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "DRIVERSLICENSE_CATEGORY": {
+        "MANAGE": "Категории водительской лицензии",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "IMPOUND_LOT": {
+        "MANAGE": "Штрафстоянки",
+        "ADD": "Добавить",
+        "DELETE": "Удалить",
+        "EDIT": "Редактировать"
+    },
+    "VEHICLE_FLAG": {
+        "MANAGE": "Управление флагами транспортных средств",
+        "ADD": "Добавить флаг транспортного средства",
+        "DELETE": "Удалить флаг транспортного средства",
+        "EDIT": "Изменить флаг транспортного средства"
+    },
+    "CITIZEN_FLAG": {
+        "MANAGE": "Управление флагами граждан",
+        "ADD": "Добавить флаг гражданина",
+        "DELETE": "Удалить флаг гражданина",
+        "EDIT": "Изменить флаг гражданина"
+    }
 }
