--- a/packages/client/locales/ru/courthouse.json
+++ b/packages/client/locales/ru/courthouse.json
@@ -1,9 +1,16 @@
 {
-  "Courthouse": {
-    "courthouse": "Суд San Andreas",
-    "requestExpungement": "Запросить удаление",
-    "noExpungementRequests": "У вас нет запросов на удаление",
-    "request": "Запросить",
-    "noPendingRequests": "Нет ожидающих запросов на удаление"
-  }
+    "Courthouse": {
+        "courthouse": "Суд San Andreas",
+        "requestExpungement": "Запросить удаление",
+        "noExpungementRequests": "У вас нет запросов на удаление",
+        "request": "Запросить",
+        "noPendingRequests": "Нет ожидающих запросов на удаление",
+        "expungementRequests": "Запросы на удаление",
+        "nameChangeRequests": "Запросы на изменение имени",
+        "requestNameChange": "Запросить изменение имени",
+        "noNameChangeRequests": "Запросов на смену имени нет.",
+        "newName": "Новое имя",
+        "newSurname": "новая фамилия",
+        "status": "Статус"
+    }
 }
