:bug: fix: add missing translations (closes #647)

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -48,7 +48,9 @@
     "openInSearch": "Open in search",
     "goBack": "Go back",
     "success": "Success",
-    "currency": "$"
+    "currency": "$",
+    "left": "Left",
+    "right": "Right"
   },
   "Nav": {
     "citizen": "Citizen",
