--- a/packages/client/locales/en/account.json
+++ b/packages/client/locales/en/account.json
@@ -34,7 +34,9 @@
     "stopRoleplay": "Stop roleplay",
     "addedToCall": "Added to call",
     "statusUpdate": "Status Update",
-    "incomingCall": "Incoming Call"
+    "incomingCall": "Incoming Call",
+    "dotColor": "Dot color",
+    "fullRowColor": "Full row color"
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
