--- a/packages/client/locales/en/account.json
+++ b/packages/client/locales/en/account.json
@@ -37,7 +37,8 @@
     "incomingCall": "Incoming Call",
     "dotColor": "Dot color",
     "fullRowColor": "Full row color",
-    "userApiToken": "User Api Token"
+    "userApiToken": "User Api Token",
+    "reGenerateToken": "Re-generate token"
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
