:tada: feat: improve records error handling

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -132,6 +132,9 @@
     "alreadyPendingNameChange": "This citizen already has a pending name change request.",
     "nameChangeRequestNotNew": "To create a name change request, the new name cannot match the previous name.",
     "socketError": "Socket connection error",
-    "socketErrorInfo": "Connection to the API has been disconnected. Please re-connect to the internet or reload the browser window."
+    "socketErrorInfo": "Connection to the API has been disconnected. Please re-connect to the internet or reload the browser window.",
+    "fine_invalidDataReceived": "Invalid fines data received. Min: {min}, max: {max}",
+    "jailTime_invalidDataReceived": "Invalid jail time data received. Min: {min}, max: {max}",
+    "bail_invalidDataReceived": "Invalid bail data received. Min: {min}, max: {max}"
   }
 }
