Fix grammar mistake

--- a/packages/client/locales/ru/values.json
+++ b/packages/client/locales/ru/values.json
@@ -17,7 +17,7 @@
         "whitelisted": "В списке доступа",
         "whatPages": "Какие страницы",
         "departments": "Департаменты",
-        "isDefaultDepartment": "Департамент по усолчанию",
+        "isDefaultDepartment": "Департамент по умолчанию",
         "deleteSelectedValues": "Удалить выбранные значения",
         "isDefault": "По умолчанию",
         "defaultOfficerRank": "Звание офицера по умолчанию",
