--- a/packages/client/locales/en/account.json
+++ b/packages/client/locales/en/account.json
@@ -36,7 +36,9 @@
     "statusUpdate": "Status Update",
     "incomingCall": "Incoming Call",
     "dotColor": "Dot color",
-    "fullRowColor": "Full row color"
+    "fullRowColor": "Full row color",
+    "userApiToken": "User Api Token",
+    "reGenerateToken": "Re-generate token"
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
