Add new text entries for 'ru' locale (#655)
* Small fix

* Add "ru" locale

* - Fix small mistakes
- Add new entries to language files

* Set correct MIME type for label

* - Error correction
- Adding new entries

* :speech_balloon: Minor change

* :speech_balloon: Update ru locale

* Fix grammar mistake

* Improvements

* Add new text entries

* :art: Fix formatiing using "yarn format"

--- a/packages/client/locales/ru/admin.json
+++ b/packages/client/locales/ru/admin.json
@@ -44,7 +44,7 @@
     "detailedPermissions": "Подробно о разрешениях",
     "useOldPermissions": "Использовать старые разрешения",
     "useNewPermissions": "Использовать новые разрешения",
-    "setSelectedOffDuty": "Установить статус юнитов, как 'вне смены'",
+    "setSelectedOffDuty": "Установить статус юнитов, как \"вне смены\"",
     "createCustomField": "Создать пользовательское поле",
     "editCustomField": "Изменить пользовательское поле",
     "noCustomFields": "Нет пользовательских полей",
