--- a/packages/client/locales/ru/calls.json
+++ b/packages/client/locales/ru/calls.json
@@ -6,7 +6,7 @@
     "active911Calls": "Активные вызовы 911",
     "noTowCalls": "Нет вызовов эвакуатора.",
     "noTaxiCalls": "Нет вызовов такси.",
-    "no911Calls": "Нет вызовов 911.",
+    "no911Calls": "Нет вызовов 911",
     "assignToCall": "Прикрепить к вызову",
     "assignedUnit": "Прикрепленные юниты",
     "unassignFromCall": "Открепить от вызова",
