--- a/packages/client/locales/ru/common.json
+++ b/packages/client/locales/ru/common.json
@@ -48,7 +48,9 @@
     "openInSearch": "Открыть в поиске",
     "goBack": "Назад",
     "success": "Выполнено",
-    "currency": "$"
+    "currency": "$",
+    "left": "Слева",
+    "right": "Справа"
   },
   "Nav": {
     "citizen": "Гражданин",
@@ -130,6 +132,9 @@
     "alreadyPendingNameChange": "У этого гражданина уже есть запрос на изменение имени.",
     "nameChangeRequestNotNew": "Чтобы создать запрос на изменение имени, новое имя не может совпадать с предыдущим именем.",
     "socketError": "Ошибка подключения сокета",
-    "socketErrorInfo": "Соединение с API было разорвано. Повторно подключитесь к Интернету или перезагрузите окно браузера."
+    "socketErrorInfo": "Соединение с API было разорвано. Повторно подключитесь к Интернету или перезагрузите окно браузера.",
+    "fine_invalidDataReceived": "Неверная величина штрафа. Мин: {min}, Макс: {max}",
+    "jailTime_invalidDataReceived": "Неверная величина заключения. Мин: {min}, Макс: {max}",
+    "bail_invalidDataReceived": "Неверная величина залога. Мин: {min}, Макс: {max}"
   }
 }
