--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -180,6 +180,9 @@
     "unitQualifications": "Unit Qualifications",
     "addQualification": "Add Qualification",
     "noQualifications": "This unit does not have any qualifications yet",
+    "qualification": "Qualification",
+    "suspend": "Suspend",
+    "unsuspend": "Unsuspend",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
