--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -183,6 +183,8 @@
     "qualification": "Qualification",
     "suspend": "Suspend",
     "unsuspend": "Unsuspend",
+    "deleteQualification": "Delete Qualification",
+    "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
