--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -177,6 +177,16 @@
     "noPenalCodes": "There have been no penal codes created yet.",
     "noVehiclesPendingApprovalInDmv": "There are no vehicles pending approval in the DMV.",
     "citizenIsConfidential": "This citizen is within a confidential department, therefor it's information cannot be searched.",
+    "unitQualifications": "Unit Qualifications",
+    "addQualification": "Add Qualification",
+    "noQualifications": "This unit does not have any qualifications yet",
+    "qualification": "Qualification",
+    "suspend": "Suspend",
+    "unsuspend": "Unsuspend",
+    "deleteQualification": "Delete Qualification",
+    "assignedAt": "Assigned at",
+    "suspendedOn": "Suspended on: ",
+    "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
