:tada: feat: add user column to manage units (closes #666)

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -50,7 +50,8 @@
     "success": "Success",
     "currency": "$",
     "left": "Left",
-    "right": "Right"
+    "right": "Right",
+    "user": "User"
   },
   "Nav": {
     "citizen": "Citizen",
