--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -49,6 +49,8 @@
     "editCustomField": "Edit custom field",
     "noCustomFields": "There are no custom fields yet",
     "deleteCustomField": "Delete Custom Field",
+    "deleteUnit": "Delete Unit",
+    "alert_deleteUnit": "Are you sure you want to delete <span>{unit}</span>? This action cannot be undone!",
     "alert_deleteCustomField": "Are you sure you want to delete this custom field? This action cannot be undone. All values created with this field will also be deleted.",
     "info_pendingBusinesses": "These are created businesses that are awaiting approval to be used. Accept or decline them.",
     "alert_deleteBusiness": "Are you sure you want to delete this <span>{name}</span>? All it's data will be lost. This action cannot be undone."
