:speech_balloon: Add new text entries for task #656

--- a/packages/client/locales/ru/admin.json
+++ b/packages/client/locales/ru/admin.json
@@ -49,6 +49,8 @@
     "editCustomField": "Изменить пользовательское поле",
     "noCustomFields": "Нет пользовательских полей",
     "deleteCustomField": "Удалить пользовательское поле",
+    "deleteUnit": "Удалить юнит",
+    "alert_deleteUnit": "Вы уверены, что хотите удалить <span>{unit}</span>? Это действие необратимо!",
     "alert_deleteCustomField": "Вы уверены, что хотите удалить это пользовательско поле? Это действие необратимо. Все записи, созданные с этим полем будут удалены.",
     "info_pendingBusinesses": "Компании, ожидающие подтверждения. Примите или отклоните их.",
     "alert_deleteBusiness": "Вы уверены, что хотите удалить <span>{name}</span>? Все данные будут потеряны. Это действие необратимо."
