--- a/packages/client/locales/ru/common.json
+++ b/packages/client/locales/ru/common.json
@@ -50,7 +50,8 @@
     "success": "Выполнено",
     "currency": "$",
     "left": "Слева",
-    "right": "Справа"
+    "right": "Справа",
+    "user": "Пользователь"
   },
   "Nav": {
     "citizen": "Гражданин",
