--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -177,6 +177,16 @@
     "noPenalCodes": "Статьи еще не созданы.",
     "noVehiclesPendingApprovalInDmv": "В DMV нет автомобилей, ожидающих одобрения.",
     "citizenIsConfidential": "Этот гражданин находится в секретном отделе, поэтому его информацию нельзя найти.",
+    "unitQualifications": "Квалификации",
+    "addQualification": "Добавить квалификацию",
+    "noQualifications": "У юнита нет квалификаций",
+    "qualification": "Квалификация",
+    "suspend": "Приостановить",
+    "unsuspend": "Возобновить",
+    "deleteQualification": "Удалить квалификацию",
+    "assignedAt": "Назначена",
+    "suspendedOn": "Приостановлена: ",
+    "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо.",
     "alert_deleteDLExam": "Вы уверены, что хотите удалить этот экзамен на получение водительских прав? Это действие необратимо.",
     "vehicleImpoundLocation": "Указанный транспорт ({plate}) будет эвакуирован в {impoundLocation}. Вы сможете просмотреть этот автомобиль на странице штрафстоянки.",
     "alert_endIncident": "Вы уверены, что хотите завершить этот инцидент. Его все еще могут просматривать офицеры.",
