--- a/packages/client/locales/ru/values.json
+++ b/packages/client/locales/ru/values.json
@@ -120,5 +120,11 @@
     "ADD": "Добавить флаг гражданина",
     "DELETE": "Удалить флаг гражданина",
     "EDIT": "Изменить флаг гражданина"
+  },
+  "QUALIFICATION": {
+    "MANAGE": "Управление квалификациями",
+    "ADD": "Добавить квалификацию",
+    "DELETE": "Удалить квалификацию",
+    "EDIT": "Редактировать квалификацию"
   }
 }
