:speech_balloon: Translation improvement

--- a/packages/client/locales/ru/admin.json
+++ b/packages/client/locales/ru/admin.json
@@ -2,13 +2,13 @@
   "Management": {
     "management": "Управление",
     "adminDashboard": "Панель администратора",
-    "MANAGE_CITIZENS": "Управление гражданами",
-    "MANAGE_BUSINESSES": "Управление компаниями",
-    "MANAGE_USERS": "Управление пользователями",
-    "MANAGE_UNITS": "Управление юнитами",
+    "MANAGE_CITIZENS": "Граждане",
+    "MANAGE_BUSINESSES": "Компании",
+    "MANAGE_USERS": "Пользователи",
+    "MANAGE_UNITS": "Юниты",
     "MANAGE_EXPUNGEMENT_REQUESTS": "Запросы на удаление",
     "MANAGE_NAME_CHANGE_REQUESTS": "Управление запросами на изменение имени",
-    "MANAGE_CAD_SETTINGS": "Настройки CAD",
+    "MANAGE_CAD_SETTINGS": "CAD",
     "MANAGE_CUSTOM_FIELDS": "Управление пользовательскими полями",
     "import": "Импорт",
     "IMPORT_CITIZENS": "Импорт граждан",
