💬 Update 'ru' locale

--- a/packages/client/locales/ru/citizen.json
+++ b/packages/client/locales/ru/citizen.json
@@ -65,6 +65,7 @@
     "untaxed": "Неоплачены",
     "passed": "Пройден",
     "failed": "Непройден",
+    "inProgress": "В прогрессе",
     "vehicleImpounded": "Транспорт эвакуирован",
     "successVehicleRegistered": "Транспорт успешно зарегистрирован с номерным знаком: {plate}",
     "dmvStatus": "Статус DMV",
