--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -186,6 +186,10 @@
     "deleteQualification": "Удалить квалификацию",
     "assignedAt": "Назначена",
     "suspendedOn": "Приостановлена: ",
+    "unitAwards": "Награды юнита",
+    "noAwards": "Юнит не имеет наград.",
+    "addAward": "Добавить награду",
+    "award": "Награда",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо.",
     "alert_deleteDLExam": "Вы уверены, что хотите удалить этот экзамен на получение водительских прав? Это действие необратимо.",
     "vehicleImpoundLocation": "Указанный транспорт ({plate}) будет эвакуирован в {impoundLocation}. Вы сможете просмотреть этот автомобиль на странице штрафстоянки.",
