💬 Update 'ru' locale

--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -61,6 +61,7 @@
     "citizenDead": "ВНИМАНИЕ: Этот гражданин погиб {date}",
     "hasWarrants": "ВНИМАНИЕ: На этого гражданина есть ордера!",
     "rank": "Звание",
+    "position": "Должность",
     "officerLogs": "Журнал офицера",
     "disableSignal100": "Отключить КОД 100",
     "enableSignal100": "Включить КОД 100",
