:hammer: chore: limit bloodtype per citizen (ref #674)

--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -92,6 +92,7 @@
     "deleteMedicalRecord": "Delete Medical Record",
     "bloodGroup": "Blood group",
     "diseases": "Diseases",
+    "info_bloodgroup": "Note: updating your bloodgroup will update all other medical records' bloodgroup",
     "alert_deleteMedicalRecord": "Are you sure you want to delete this medical record? This action cannot be undone."
   }
 }
