💬 Update 'ru' locale

--- a/packages/client/locales/ru/citizen.json
+++ b/packages/client/locales/ru/citizen.json
@@ -92,6 +92,7 @@
     "deleteMedicalRecord": "Удалить медицинскую запись",
     "bloodGroup": "Группа крови",
     "diseases": "Заболевания",
+    "info_bloodgroup": "Примечание: обновление группы крови изменит значение группы крови в других записях",
     "alert_deleteMedicalRecord": "Вы уверены, что хотите удалить эту медицинскую запись? Это действие необратимо."
   }
 }
