--- a/packages/client/locales/ru/values.json
+++ b/packages/client/locales/ru/values.json
@@ -110,19 +110,19 @@
     "EDIT": "Редактировать"
   },
   "VEHICLE_FLAG": {
-    "MANAGE": "Управление флагами транспортных средств",
+    "MANAGE": "Флаги транспортных средств",
     "ADD": "Добавить флаг транспортного средства",
     "DELETE": "Удалить флаг транспортного средства",
     "EDIT": "Изменить флаг транспортного средства"
   },
   "CITIZEN_FLAG": {
-    "MANAGE": "Управление флагами граждан",
+    "MANAGE": "Флаги граждан",
     "ADD": "Добавить флаг гражданина",
     "DELETE": "Удалить флаг гражданина",
     "EDIT": "Изменить флаг гражданина"
   },
   "QUALIFICATION": {
-    "MANAGE": "Управление квалификациями",
+    "MANAGE": "Квалификации",
     "ADD": "Добавить квалификацию",
     "DELETE": "Удалить квалификацию",
     "EDIT": "Редактировать квалификацию"
