:tada: feat: able to specify division template (paired unit template)

--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -21,6 +21,7 @@
     "deleteSelectedValues": "Delete Selected Values",
     "isDefault": "Is Default",
     "defaultOfficerRank": "Default Officer Rank",
+    "pairedUnitTemplate": "Paired Unit Template",
     "alert_deletePenalCodeGroup": "Are you sure you want to delete <span>{group}</span>? This action cannot be undone.",
     "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!",
     "alert_deleteSelectedValues": "Are you sure you want to delete {length} items? This action cannot be undone"
