--- a/packages/client/locales/ru/values.json
+++ b/packages/client/locales/ru/values.json
@@ -21,6 +21,7 @@
     "deleteSelectedValues": "Удалить выбранные значения",
     "isDefault": "По умолчанию",
     "defaultOfficerRank": "Звание офицера по умолчанию",
+    "pairedUnitTemplate": "Шаблон парного юнита",
     "alert_deletePenalCodeGroup": "Вы уверены, что хотите удалить <span>{group}</span>? Это действие необратимо.",
     "alert_deleteValue": "Вы уверены, что хотите удалить <span>{value}</span>? Это действие необратимо.",
     "alert_deleteSelectedValues": "Вы уверены, что хотите удалить {length} элемент (ов)? Это действие необратимо."
