--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -50,6 +50,7 @@
     "noCustomFields": "There are no custom fields yet",
     "deleteCustomField": "Delete Custom Field",
     "deleteUnit": "Delete Unit",
+    "callsignManagement": "Callsign Management",
     "alert_deleteUnit": "Are you sure you want to delete <span>{unit}</span>? This action cannot be undone!",
     "alert_deleteCustomField": "Are you sure you want to delete this custom field? This action cannot be undone. All values created with this field will also be deleted.",
     "info_pendingBusinesses": "These are created businesses that are awaiting approval to be used. Accept or decline them.",
