--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -22,6 +22,7 @@
     "isDefault": "Is Default",
     "defaultOfficerRank": "Default Officer Rank",
     "pairedUnitTemplate": "Paired Unit Template",
+    "isConfidential": "Is Confidential",
     "alert_deletePenalCodeGroup": "Are you sure you want to delete <span>{group}</span>? This action cannot be undone.",
     "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!",
     "alert_deleteSelectedValues": "Are you sure you want to delete {length} items? This action cannot be undone"
