:hammer: chore: disable unit

--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -122,7 +122,7 @@
     "releaseCitizen": "You are about to release this citizen. Please select the reason why they are getting released.",
     "reportedStolen": "Reported Stolen",
     "pendingAccessDepartment": "You are still awaiting access for this department. This CAD has set a default department ({defaultDepartment}) that you are in until you're accepted.",
-    "pendingAccessDepartmentNoDefault": "You are still awaiting access for this department. There is not default department set so this officer will be disabled until you're accepted.",
+    "pendingAccessDepartmentNoDefault": "You are still awaiting access for this department. There is not default department set so this unit will be disabled until you're accepted.",
     "editTicket": "Edit Ticket",
     "editArrestReport": "Edit Arrest Report",
     "editWrittenWarning": "Edit Written Warning",
