--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -34,7 +34,7 @@
     "status": "Status",
     "allBusinesses": "All Businesses",
     "whitelisted": "Whitelisted",
-    "declineOfficer": "Decline Officer",
+    "declineUnit": "Decline Unit",
     "action": "Action",
     "noPendingOfficers": "There are no officers pending access to a department.",
     "allUnits": "All Units",
