--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -141,6 +141,7 @@
     "pageNotFound": "Page Not Found",
     "unitCallsignInUse": "This full callsign is already in-use by another unit. Please specify another callsign.",
     "steamNameInUse": "Could not create a new account with Steam since the username is already in-use.",
-    "steamAccountAlreadyLinked": "This Steam account is already linked to another account."
+    "steamAccountAlreadyLinked": "This Steam account is already linked to another account.",
+    "cannotRegisterFirstWithSteam": "The first account must be registered without Steam. You can link Steam once the account is created."
   }
 }
