💬 Update 'ru' locale

--- a/packages/client/locales/ru/auth.json
+++ b/packages/client/locales/ru/auth.json
@@ -17,6 +17,7 @@
     "savePasswordInfo": "Убедитесь, что надежно сохранили новый пароль, чтобы этого больше не повторилось!",
     "loginViaDiscord": "Войти через Discord",
     "continueAs": "Продолжить, как {username}",
-    "sixDigitCode": "Введите 6-значный код из приложения-аутентификатора"
+    "sixDigitCode": "Введите 6-значный код из приложения-аутентификатора",
+    "loginViaSteam": "Войти через Steam"
   }
 }
