--- a/packages/client/locales/ru/common.json
+++ b/packages/client/locales/ru/common.json
@@ -138,6 +138,11 @@
     "jailTime_invalidDataReceived": "Неверная величина заключения. Мин: {min}, Макс: {max}",
     "bail_invalidDataReceived": "Неверная величина залога. Мин: {min}, Макс: {max}",
     "forbidden": "Запрещено",
-    "pageNotFound": "Страница не найдена"
+    "pageNotFound": "Страница не найдена",
+    "unitCallsignInUse": "Этот позывной используется другим юнитом. Укажите другой позывной.",
+    "steamNameInUse": "Не удалось создать новый аккаунт с таким Steam, имя пользователя уже используется.",
+    "steamAccountAlreadyLinked": "Этот Steam аккаунт уже привязан к другому аккаунту.",
+    "cannotRegisterFirstWithSteam": "Первый аккаунт должен быть зарегистрирован без Steam. Вы можете подключить Steam после создания аккаунта.",
+    "Unauthorized": "Вы были отключены. Войдите, чтобы продолжить."
   }
 }
