--- a/packages/client/locales/ru/account.json
+++ b/packages/client/locales/ru/account.json
@@ -38,7 +38,13 @@
     "dotColor": "Точка",
     "fullRowColor": "Строка",
     "userApiToken": "Пользовательский Api токен",
-    "reGenerateToken": "Сгенерировать токен заново"
+    "reGenerateToken": "Сгенерировать токен заново",
+    "discord": "Discord",
+    "steam": "Steam",
+    "connectSteam": "Подключить аккаунт Steam",
+    "disconnectSteam": "Отключить аккаунт Steam",
+    "disconnectSteamText": "Это действие отключит возможность входить через Steam.",
+    "connectSteamText": "Это действие включит возможность входить через Steam."
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> был удалён. Причина: {reason}"
