--- a/packages/client/locales/ru/admin.json
+++ b/packages/client/locales/ru/admin.json
@@ -50,6 +50,7 @@
     "noCustomFields": "Нет пользовательских полей",
     "deleteCustomField": "Удалить пользовательское поле",
     "deleteUnit": "Удалить юнит",
+    "callsignManagement": "Позывные",
     "alert_deleteUnit": "Вы уверены, что хотите удалить <span>{unit}</span>? Это действие необратимо!",
     "alert_deleteCustomField": "Вы уверены, что хотите удалить это пользовательско поле? Это действие необратимо. Все записи, созданные с этим полем будут удалены.",
     "info_pendingBusinesses": "Компании, ожидающие подтверждения. Примите или отклоните их.",
