--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -192,6 +192,7 @@
     "addAward": "Добавить награду",
     "award": "Награда",
     "activeCall": "Активный вызов",
+    "arrestReportLogs": "Журнал отчетов об арестах",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо.",
     "alert_deleteDLExam": "Вы уверены, что хотите удалить этот экзамен на получение водительских прав? Это действие необратимо.",
     "vehicleImpoundLocation": "Указанный транспорт ({plate}) будет эвакуирован в {impoundLocation}. Вы сможете просмотреть этот автомобиль на странице штрафстоянки.",
