--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -195,6 +195,16 @@
     "arrestReportLogs": "Arrest Report Logs",
     "activeUnits": "Active Units",
     "noActiveUnits": "There are no active units on the live map.",
+    "player": "Player",
+    "cadUsername": "CAD Username",
+    "emsFd": "EMS-FD",
+    "leo": "LEO",
+    "weapon": "Weapon",
+    "vehicle": "Vehicle",
+    "onFoot": "On Foot",
+    "licensePlate": "License Plate",
+    "identifier": "Identifier",
+    "togglePlayer": "Toggle Player",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
