:hammer: chore: merge expungement & name change requests into 1 page

--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -10,6 +10,7 @@
     "MANAGE_NAME_CHANGE_REQUESTS": "Manage Name Change Requests",
     "MANAGE_CAD_SETTINGS": "CAD Settings",
     "MANAGE_CUSTOM_FIELDS": "Manage Custom Fields",
+    "MANAGE_COURTHOUSE": "Manage Courthouse",
     "import": "Import",
     "IMPORT_CITIZENS": "Import Citizens",
     "IMPORT_VEHICLES": "Import Vehicles",
