--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -193,6 +193,18 @@
     "award": "Награда",
     "activeCall": "Активный вызов",
     "arrestReportLogs": "Журнал отчетов об арестах",
+    "activeUnits": "Активные юниты",
+    "noActiveUnits": "На карте нет активных юнитов",
+    "player": "Игрок",
+    "cadUsername": "Имя в CAD",
+    "emsFd": "EMS-FD",
+    "leo": "LEO",
+    "weapon": "Оружие",
+    "vehicle": "Транспорт",
+    "onFoot": "Пешком",
+    "licensePlate": "Регистрационный номер",
+    "identifier": "Идентификатор",
+    "togglePlayer": "Переключить игрока",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо.",
     "alert_deleteDLExam": "Вы уверены, что хотите удалить этот экзамен на получение водительских прав? Это действие необратимо.",
     "vehicleImpoundLocation": "Указанный транспорт ({plate}) будет эвакуирован в {impoundLocation}. Вы сможете просмотреть этот автомобиль на странице штрафстоянки.",
