--- a/packages/client/locales/cn/auth.json
+++ b/packages/client/locales/cn/auth.json
@@ -18,6 +18,6 @@
     "loginViaDiscord": "通过不和谐登录",
     "continueAs": "继续为 {username}",
     "sixDigitCode": "请输入验证器应用中的 6 位数代码",
-    "loginViaSteam": "通过蒸汽登录"
+    "loginViaSteam": "通过Steam登录"
   }
 }
