--- a/packages/client/locales/cn/account.json
+++ b/packages/client/locales/cn/account.json
@@ -6,8 +6,8 @@
     "passwordSettings": "密码设置",
     "appearanceSettings": "外观设置",
     "connections": "连接",
-    "connectDiscord": "连接不和谐帐户",
-    "disconnectDiscord": "断开不和谐帐户",
+    "connectDiscord": "连接Discord帐户",
+    "disconnectDiscord": "断开Discord帐户",
     "disconnectText": "这将删除通过Discord登录的功能.",
     "disabledDisconnectText": "启用“禁止常规登录”时，您无法断开Discord连接。要删除您的帐户，请联系管理员",
     "connectText": "这将增加通过Discord登录的功能。",
