--- a/packages/client/locales/cn/leo.json
+++ b/packages/client/locales/cn/leo.json
@@ -8,10 +8,10 @@
     "deleteOfficer": "删除警官",
     "callsign": "呼号",
     "department": "部门",
-    "officer": "官员",
+    "officer": "警官",
     "officerName": "官员姓名",
-    "noOfficers": "你还没有军官。",
-    "selectOfficer": "遴选官员",
+    "noOfficers": "你还没有警官。",
+    "selectOfficer": "遴选警官",
     "totalTime": "总时间",
     "startedAt": "开始于",
     "endedAt": "结束于",
@@ -123,7 +123,7 @@
     "reportedStolen": "报告被盗",
     "pendingAccessDepartment": "您仍在等待此部门的访问权限。此 CAD 已设置了一个默认部门（{defaultDepartment}）,在您被接受之前,您就位于该部门。",
     "pendingAccessDepartmentNoDefault": "您仍在等待此部门的访问权限。没有设置默认部门,因此在您被接受之前,此单元将被禁用。",
-    "editTicket": "编辑工单",
+    "editTicket": "编辑罚单",
     "editArrestReport": "编辑逮捕报告",
     "editWrittenWarning": "编辑书面警告",
     "quantity": "数量",
@@ -148,8 +148,8 @@
     "mergeOfficers": "合并警官",
     "manageVehicleFlags": "管理车辆标志",
     "manageCitizenFlags": "Manage citizen flags",
-    "successCreateWarrant": "已成功为 {citizen} 创建认股权证",
-    "successCreateTicket": "已成功为 {citizen}创建工单",
+    "successCreateWarrant": "已成功为 {citizen} 创建警告",
+    "successCreateTicket": "已成功为 {citizen}创建罚单",
     "successCreateArrestReport": "已成功为 {citizen} 创建逮捕报告",
     "successCreateWarning": "已成功为 {citizen} 创建书面警告",
     "goOnDuty": "去值班",
@@ -208,7 +208,7 @@
     "alert_deleteQualification": "您确定要删除此资格吗？此操作无法撤消",
     "alert_deleteDLExam": "是否确实要删除此驾照考试？此操作无法撤消",
     "vehicleImpoundLocation": "提供的车辆（{plate}）将在{扣押地点}扣押。您将能够在扣押地块页面上查看此车辆",
-    "alert_endIncident": "你确定要结束这件事吗？它仍然可以被军官查看",
+    "alert_endIncident": "你确定要结束这件事吗？它仍然可以被警官查看",
     "alert_deleteRecord": "是否确实要删除此记录？此操作无法撤消",
     "alert_deleteOfficer": "是否确实要删除 <span>{officer}</span>？此操作无法撤消",
     "alert_allowCheckout": "您确定要从扣押地段检查这辆车吗？",
