--- a/packages/client/locales/cn/common.json
+++ b/packages/client/locales/cn/common.json
@@ -36,7 +36,7 @@
     "optionalField": "可选",
     "title": "标题",
     "image": "图像",
-    "imgur": "Imgur URL",
+    "imgur": "图像链接",
     "postal": "邮政",
     "viewDescription": "查看描述",
     "citizen": "公民",
@@ -60,13 +60,13 @@
     "taxi": "出租车",
     "business": "业务",
     "truckLogs": "卡车原木",
-    "admin": "Admin",
+    "admin": "管理",
     "dispatch": "调度",
     "liveMap": "实时地图",
-    "officer": "官员",
+    "officer": "警官",
     "dashboard": "仪表板",
-    "myOfficers": "我的军官",
-    "myOfficerLogs": "我的军官日志",
+    "myOfficers": "我的警官",
+    "myOfficerLogs": "我的警官日志",
     "incidents": "事件",
     "impoundLot": "扣押地段",
     "manageUnits": "管理单位",
