--- a/packages/client/locales/cn/ems-fd.json
+++ b/packages/client/locales/cn/ems-fd.json
@@ -14,7 +14,7 @@
     "noDeputies": "你没有任何副手",
     "noActiveDeputies": "没有现役代表",
     "citizenNoMedicalRecords": "这个公民没有任何医疗记录。",
-    "activeDeputy": "现役副手",
+    "activeDeputy": "活跃的副手",
     "declareDead": "宣布死亡",
     "declareAlive": "宣布活着",
     "alert_deleteDeputy": "是否确实要删除 <span>{deputy}</span>？此操作无法撤消。"
